fix styling and layout issues

--- a/socket_gallows/assets/css/app.css
+++ b/socket_gallows/assets/css/app.css
@@ -8,6 +8,10 @@ body {
   opacity: 0.1;
 }
 
+.row {
+  display: flex;
+}
+
 svg path {
   transition: opacity 0.5s;
 }
